# one-time-pad

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  azure-pipelines.yml  win-build.bat
script/: unix-test.sh  win-test.ps1
src/: action.h  action_error.h  bad_argument.h  const_strings.h  debug_util.h  global_data.h  internal_error.h  logger.cpp  logger.h  otp.cpp  otp_help.h  otp_init.h  otp_status.h
test/: CMakeLists.txt  example_test.cpp
